<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.SignUpActivity">

    <LinearLayout
        android:layout_margin="32dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signup_01"
            android:text="@string/signup_01"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_02"
            android:hint="@string/signup_02"
            android:inputType="text"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_03"
            android:hint="@string/signup_03"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_04"
            android:hint="@string/signup_04"
            android:inputType="phone"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_05"
            android:hint="@string/signup_05"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/signup_06"
            android:text="@string/signup_06"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:background="@drawable/border_btn"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:id="@+id/signup_07"
            android:text="@string/signup_07"
            android:textColor="@color/textColor"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:id="@+id/signup_08"
            android:orientation="horizontal"
            android:background="@drawable/border_white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/ic_google_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:id="@+id/signup_08_1"
                android:text="@string/signup_08"
                android:textColor="@color/textColor"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:background="@color/gray"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp">

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_09"
                android:text="@string/signup_09"
                android:textColor="@color/textColor"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/signup_10"
                android:text="@string/signup_10"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>