<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/home_ask_title"
        android:id="@+id/home_ask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/textColor"
        android:layout_gravity="center"
        android:text="@string/home_ask_message"
        android:id="@+id/home_ask_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:paddingHorizontal="24dp"
        android:textSize="18dp"
        android:id="@+id/home_ask_button"
        android:text="@string/home_ask_button"
        android:textColor="@color/white"
        android:background="@drawable/border_btn"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>