<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Screens.ProfileActivity">

    <LinearLayout
        android:background="@drawable/home_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:layout_margin="16dp"
            android:tint="@color/white"
            android:id="@+id/profile_back"
            android:layout_width="32dp"
            android:layout_height="32dp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:src="@drawable/icontest"
        android:layout_marginTop="-66dp"
        android:layout_gravity="center"
        android:layout_width="132dp"
        android:layout_height="132dp" />

    <TextView
        android:id="@+id/profile_name"
        android:text="@string/profile_name"
        android:textColor="@color/textColor"
        android:textSize="24dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_account"
        android:text="@string/profile_account"
        android:textColor="@color/textColor"
        android:textSize="16dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_preferences"
        android:text="@string/profile_preferences"
        android:textColor="@color/textColor"
        android:textSize="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_exit"
        android:text="@string/profile_exit"
        android:textColor="@color/red"
        android:textSize="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>